# metadata-platform

./: .gitignore  CLAUDE.md  README.md
.claude/commands/: push-metadata.md  review-metadata.md  scan-metadata.md  search-metadata.md
bank-conn/: pyproject.toml
bank-conn/config/: config.yaml
bank-conn/src/bank_conn/: __init__.py  config.py  connection.py  emitter.py  resolver.py
bank-conn/tests/unit/: test_config.py  test_connection.py  test_emitter.py  test_resolver.py
collector/: pyproject.toml
collector/config/: config.yaml
collector/src/metadata_collector/: __init__.py  db.py  main.py  schemas.py  settings.py
collector/src/metadata_collector/api/: connection_router.py  deps.py  lineage_router.py  search_router.py
collector/src/metadata_collector/repositories/: __init__.py  connection_repo.py  dataset_repo.py  job_repo.py  lineage_repo.py  outbox_repo.py
collector/src/metadata_collector/services/: __init__.py  ingestion_service.py
collector/tests/: conftest.py
collector/tests/integration/: conftest.py  test_connection_repo.py  test_dataset_repo.py  test_ingestion_service.py  test_lineage_repo.py  test_search_api.py
collector/tests/unit/: test_ingestion_static.py  test_schemas.py
docker/: Dockerfile.collector  docker-compose.yml
docs/: API.md  DESIGN.md  INTEGRATION.md  SKILLS.md
migrations/: migrate.sh
migrations/sql/: V0001__initial_schema.sql
samples/: register_connections.py  sample_etl.py  smoke_test.py
tools/: metadata_scanner.py
