[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bank-conn"
version = "0.1.0"
description = "Logical connection resolver + OpenLineage emitter for MBBank data platform"
requires-python = ">=3.10"
dependencies = [
    "httpx==0.27.0",
    "sqlalchemy==2.0.30",
    "openlineage-python==1.20.5",
    "hvac==2.3.0",  # HashiCorp Vault client
    "pyyaml>=6.0",
]

[project.optional-dependencies]
oracle = ["oracledb==2.2.1"]
postgres = ["psycopg2-binary==2.9.9"]
mysql = ["pymysql==1.1.1"]
spark = ["pyspark>=3.5,<3.6"]  # caller provides; loose pin
dev = ["pytest==8.2.2", "pytest-asyncio==0.23.7", "ruff==0.5.0", "mypy==1.10.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: pure unit tests, no external deps",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
